Removed doxygen tags

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 .vscode
 .local_files
-build/*
-!build/*.bin
-!build/bootloader
-build/bootloader/*
-!build/bootloader/bootloader.bin
-!build/partition_table
-build/partition_table/*
-!build/partition_table/*.bin
+build/**
 sdkconfig
 sdkconfig.old
 doc/api
